# metron-tagger

./: .coveragerc  .editorconfig  .eslintignore  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .remarkignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  NEWS.md  Pipfile  README.md  README.rst  changelog-ci-config.json  eslint.config.js  metron-tagger.py  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: release-drafter.yml
.github/workflows/: build.yml  changelog-ci.yml  codecov.yml  codeql-analysis.yml  pypi.yml  python-app.yml  pythonapp.yml  release-drafter.yml  release.yml  sonarcloud.yml  testing.yml
comicapi/: comicarchive.py  comicbookinfo.py  comicinfoxml.py  filenameparser.py  genericmetadata.py  issuestring.py  utils.py
metrontagger/: .travis.yml  __init__.py  cli.py  duplicates.py  filerenamer.py  filesorter.py  logging.py  main.py  metron_tagger.py  options.py  run.py  settings.py  styles.py  talker.py  utils.py  validate.py  validate_ci.py
metrontagger/comicapi/: comicarchive.py  comicbookinfo.py  comicinfoxml.py  filenameparser.py  genericmetadata.py  utils.py
metrontagger/schema/comicinfo/v1/: ComicInfo.xsd
metrontagger/schema/comicinfo/v2/: ComicInfo.xsd
metrontagger/schema/metroninfo/v1/: MetronInfo.xsd
metrontagger/taggerlib/: filerenamer.py  filesorter.py  metrontalker.py  options.py  settings.py  talker.py  utils.py
metrontagger/tests/: test_comicapi_comicarchive.py  test_comicapi_comicinfoxml.py  test_comicapi_filenameparser.py  test_comicapi_genericmetadata.py  test_comicapi_utils.py  test_taggerlib_filerenamer.py
taggerlib/: filerenamer.py  metrontalker.py  options.py  settings.py
tests/: conftest.py  test_cli.py  test_comicapi_comicarchive.py  test_comicapi_comicinfoxml.py  test_comicapi_filenameparser.py  test_comicapi_genericmetadata.py  test_comicapi_issue_string.py  test_comicapi_utils.py  test_duplicates.py  test_filerenamer.py  test_filesorter.py  test_logging.py  test_metron_tagger.py  test_options.py  test_run.py  test_settings.py  test_taggerlib_filerenamer.py  test_taggerlib_filesorter.py  test_taggerlib_metrontalker.py  test_taggerlib_options.py  test_taggerlib_settings.py  test_taggerlib_talker.py  test_taggerlib_utils.py  test_talker.py  test_utils.py  test_validate.py
